sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:20: error: not found: value debut
    for(i <- fin to debut by -1)
                    ^